--- a/sandbox/sandbox.css
+++ b/sandbox/sandbox.css
@@ -46,6 +46,18 @@ body {
     background: #008bf5;
     color: #fff;
 }
+.toolbar a {
+    display: inline-block;
+    vertical-align: middle;
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    border: 1px solid blue;
+    border-radius: 50%;
+    text-align: center;
+    text-decoration: none;
+    font-size: 80%;
+}
 
 .sql-editor {
     position: relative;
