--- a/sandbox/sandbox.css
+++ b/sandbox/sandbox.css
@@ -32,6 +32,7 @@ body {
 }
 
 .toolbar {
+    margin-top: 0.5rem;
 }
 .toolbar button {
     vertical-align: middle;
@@ -149,6 +150,7 @@ body {
 @media only screen and (min-width: 48em) {
     .toolbar {
         display: inline-block;
+        margin-top: 0;
         margin-left: 1rem;
     }
 
