sandbox: better reset action

--- a/sandbox/sandbox.css
+++ b/sandbox/sandbox.css
@@ -143,6 +143,10 @@ body {
     color: #008bf5;
 }
 
+.link-img {
+    text-decoration: none !important;
+}
+
 .hidden {
     display: none !important;
 }
