--- a/sandbox/sandbox.css
+++ b/sandbox/sandbox.css
@@ -3,6 +3,10 @@
         sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --font-monospace: "SFMono-Regular", Consolas, "Liberation Mono", Menlo,
         Courier, monospace;
+    --color-blue: #008bf5;
+    --color-dark-gray: #aaa;
+    --color-gray: #ccc;
+    --color-red: red;
 }
 *,
 *::before,
@@ -36,11 +40,14 @@ body {
     vertical-align: middle;
     margin: 0;
     padding: 0;
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 .toolbar {
     margin-top: 0.5rem;
+}
+.toolbar > * {
+    margin-left: 0.25rem;
 }
 .toolbar button {
     vertical-align: middle;
@@ -57,17 +64,21 @@ body {
 .toolbar input[type="file"] {
     display: none;
 }
-.toolbar .help {
+.toolbar .button-round {
     display: inline-block;
     vertical-align: middle;
-    width: 1rem;
-    height: 1rem;
-    line-height: 1rem;
-    border: 1px solid blue;
+    width: 1.25rem;
+    height: 1.25rem;
+    border: 1px solid var(--color-blue);
     border-radius: 50%;
     text-align: center;
     text-decoration: none;
+    color: var(--color-blue);
     font-size: 80%;
+}
+.toolbar .button-round:hover {
+    background: var(--color-blue);
+    color: #fff;
 }
 
 .sql-editor {
@@ -76,24 +87,13 @@ body {
     resize: vertical;
     width: 100%;
     min-height: 5rem;
-    border: 1px solid #ccc;
+    border: 1px solid var(--color-gray);
     padding: 0.5rem;
     white-space: pre-wrap;
     font-family: var(--font-monospace);
 }
 .sql-editor:focus {
     outline: none;
-}
-.sql-editor::after {
-    position: absolute;
-    right: -1px;
-    bottom: -1px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    padding: 0.125rem;
-    color: #aaa;
-    font-size: 80%;
-    content: "Ctrl+Enter";
 }
 
 .sql-status {
@@ -108,7 +108,7 @@ body {
 .sql-status--error::before {
     display: inline-block;
     width: 1rem;
-    color: red;
+    color: var(--color-red);
     content: "✕";
 }
 
@@ -117,13 +117,13 @@ body {
 }
 .sql-result table {
     width: 100%;
-    border: 1px solid #ccc;
+    border: 1px solid var(--color-gray);
     border-collapse: collapse;
     font-family: var(--font-monospace);
     /* font-size: 90%; */
 }
 .sql-result table th {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid var(--color-gray);
     padding: 0.25rem 0.5rem;
     text-align: left;
 }
@@ -132,16 +132,16 @@ body {
 }
 
 .button-small {
-    border: 1px solid #008bf5;
+    border: 1px solid var(--color-blue);
     border-radius: 0.125rem;
     background: #fff;
-    padding: 0.125em 0.25rem;
-    color: #008bf5;
+    padding: 0.125em 0.5rem;
+    color: var(--color-blue);
     cursor: pointer;
     font-size: 80%;
 }
 .button-small:hover {
-    background: #008bf5;
+    background: var(--color-blue);
     color: #fff;
 }
 .button-small:disabled {
@@ -161,11 +161,29 @@ body {
     display: none !important;
 }
 
-@media only screen and (min-width: 48em) {
+@media only screen and (max-width: 40rem) {
+    .hidden-mobile {
+        display: none !important;
+    }
+}
+
+@media only screen and (min-width: 40rem) {
     .toolbar {
         display: inline-block;
         margin-top: 0;
         margin-left: 1rem;
+    }
+
+    .sql-editor::after {
+        position: absolute;
+        right: -1px;
+        bottom: -1px;
+        display: inline-block;
+        border: 1px solid var(--color-gray);
+        padding: 0.125rem 0.25rem;
+        color: var(--color-dark-gray);
+        font-size: 80%;
+        content: "Ctrl+Enter";
     }
 
     .sql-result table {
